--- a/css/styles.css
+++ b/css/styles.css
@@ -9,15 +9,15 @@
   min-height: 400px; }
 
 .footer {
-  background-color: #FFD2D2;
+  background-color: #000;
+  color: white;
   margin: 0px auto;
   padding: 20px 0px; }
 
 .jumbotron {
   margin: 0px auto;
   padding: 70px 30px;
-  background: #dd1021;
-  color: floralwhite; }
+  color: #373463; }
 
 address {
   font-size: 80%;
@@ -29,7 +29,8 @@ body {
   z-index: 0; }
 
 .navbar-dark {
-  background-color: #000; }
+  background-color: #dd1021;
+  color: white; }
 
 .tab-content {
   border-left: 1px solid #ddd;
@@ -38,21 +39,28 @@ body {
   padding: 10px; }
 
 .carousel {
-  background: #000; }
+  color: #373463; }
+  .carousel .carousel-caption p {
+    color: #373463; }
+  .carousel .carousel-caption h3 {
+    color: #373463; }
+  .carousel .carousel-caption h2 {
+    color: #373463; }
   .carousel .carousel-item {
-    height: 300px; }
+    height: 300px;
+    color: #373463; }
     .carousel .carousel-item img {
-      position: absolute;
+      margin: auto;
       top: 0;
       left: 0;
-      min-height: 300px; }
+      height: 300px; }
 
 .modal .modal-header {
-  background: #000;
-  color: floralwhite; }
+  background: #dd1021;
+  color: white; }
 
 .modal .modal-content {
-  background: #FFD2D2; }
+  background: #ddd; }
 
 .modal .close {
   color: #FFD2D2; }
